--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ table {
 html, body {
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
 }
 
 body {
@@ -55,7 +55,7 @@ body {
 #particles {
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
 }
 
 #intro {
